<resources>
    <string name="app_name">Stay Kozani</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="desc">Null Description</string>
    <string name="looking_for">Ψάχνεις για&#8230;</string>
    <string name="space">space</string>
    <string name="monuments">Αξιοθέατα</string>
    <string name="entertainment">Διασκέδαση</string>
    <string name="restaurants">Εστίαση</string>
    <string name="accommodation">Διαμονή</string>
    <string name="category">Category</string>
    <string name="map">Δες το στον χάρτη!</string>
    <string name="view_more">Περισσότερα&#8230;</string>
    <string name="information">Πληροφορίες</string>
    <string name="next">Επόμενη</string>
    <string-array name="monuments_array">
        <item>Εκκλησία Αγίου Νικολάου@40.300776@21.787453@Πανδώρας 2@ Ο ναός του Αγίου Νικολάου είναι ο τρίτος σε αρχαιότητα ναός της Κοζάνης. Με το να χτιστεί όμως στο κέντρο της αναπτυσσόμενης τότε πόλης, καθιερώθηκε από την αρχή ως ο πρώτος και καθεδρικός ναός της πόλης και αργότερα και της εκκλησιαστικής επαρχίας Σερβίων και Κοζάνης. Και έτσι ο ναός αυτός έγινε ο επίσημος δημόσιος χώρος προσευχής και το πρωτεύον κέντρο λατρείας τών Κοζανιτών.@ Το κτηριακό συγκρότημα της ενορίας του Αγίου Νικολάου αποτελείται εκτός από τον κυρίως ναό, το καμπαναριό, τον Ιερό Ναό Αγίου Νικολάου, από το γραφείο των ιερέων, τους αποθηκευτικούς χώρους και την έκθεση χριστιανικού βιβλίου, που όλα βρίσκονται μέσα στο περίβολο του Αγίου Νικολάου. Ο ρυθμός του ναού, είναι τρίκλιτη βασιλική καμαροσκέπαστη με δίρριχτη στέγη με πλάκες και κεραμίδια. Έχει πρόναο και νεότερες πλαϊνές επεκτάσεις. Στα δύο κλίτη του έχει δύο παρεκκλήσια: του Αγίου Ιωάννη του Προδρόμου και της Παναγίας. Ο φωτισμός του ναού είναι λίγος και υποβλητικός (λόγω του γεγονότος ότι τα παράθυρα είναι πολύ μικρά) δίνοντας στον προσκυνητή το αίσθημα της βαθειάς κατάνυξης και του μυστηρίου που συντελείται επί του ιερού θυσιαστηρίου. </item>
        <item>Αρχοντικό Λασσάνης@40.299149@21.790210@Πλατεία Λασσάνη και Αρχελάου@ Το αρχοντικό ήταν χτισμένο μέσα σε μία μεγάλη ιδιοκτησία, προστατευμένη από μία ψηλή πέτρινη μάντρα. Οι διαστάσεις τού αρχοντικού δεν ήταν αρκετά επιβλητικές όσο άλλων στην Κοζάνη, όμως χαρακτηριζόταν από έναν αρμονικό όγκο με μορφολογικά χαρακτηριστικά αστικής αρχιτεκτονικής και μία λειτουργικότητα σοφά προσαρμοσμένη στις καιρικές συνθήκες τού τόπου.@ Η κατοικία έχει έναν εσωστρεφή χαρακτήρα, ο οποίος καθορίζεται από την ανάπτυξή της γύρω από μία μικρή πλακόστρωτη αυλή. Μία ημιυπαίθρια μεταβατική ζώνη από την ιδιωτική αυλή προς το εσωτερικό τής κατοικίας διαμορφώνεται από το χαγιάτι πού λειτουργεί σαν ουσιώδες συστατικό της κατοικίας.</item>
        <item>Λαογραφικό Μουσείο@40.301480@21.785176@Ίωνος Δραγούμη 9&#8211;11@ Το Ιστορικό&#8211;Λαογραφικό και Φυσικής Ιστορίας Μουσείο Κοζάνης ιδρύθηκε το 1969 και εγκαινιάσθηκε επίσημα στις 10 Οκτωβρίου 1987. Το Μουσείο είναι δημιούργημα του Συνδέσμου Γραμμάτων και Τεχνών Ν. Κοζάνης.@ Το Ιστορικό&#8211;Λαογραφικό και Φυσικής Ιστορίας Μουσείο ανήκει στην κατηγορία των Ιστορικών&#8211;Λαογραφικών Μουσείων. Βρίσκεται στο κέντρο της πόλης. Περιλαμβάνει τις εξής θεματικές κατηγορίες: Έκθεση Φυσικής Ιστορίας (από την Παλαιολιθική εποχή μέχρι και τους νεότερους χρόνους), Αρχαιολογική&#8211;Βυζαντινή έκθεση (από το 7000 π.Χ. έως 1453 μ.Χ.), Ιστορική έκθεση (από το 1453 έως 1944), Λαογραφική έκθεση, που θεωρείται και η σημαντικότερη, (από το 1640 έως 1960), Πινακοθήκη νεότερων χρόνων, Συλλογή γραμματοσήμων (1861&#8211;2004) και Συλλογή ραδιοφώνων (1930&#8211;1960). Στόχος της ίδρυσης του Μουσείου ήταν η διάσωση της πολιτιστικής κληρονομιάς του τόπου μέσω της καταγραφής και περισυλλογής των αντικειμένων, με απώτερο σκοπό την εκπαίδευση και την επιμόρφωση των επισκεπτών.</item>
    </string-array>
    <string-array name="entertainment_array">
        <item>T26@40.298355@21.787357@Ι. Τράντα 26@ Ένα καφέ&#8211;μπαρ που αποτελεί μία ξεχωριστή πρόταση στη διασκέδαση από το πρωί με καφέ και άλλα ροφήματα, μέχρι το βράδυ με καλή μουσική, άψογη εξυπηρέτηση και τους συντελεστές του μαγαζιού να δίνουν τον καλύτερό τους εαυτό προκειμένου να δημιουργήσουν ένα όμορφο περιβάλλον για όσους επιλέξουν λίγες ώρες χαλάρωσης.@ Ένα espresso and wine bar που ανταποκρίνεται με τον πιο μοντέρνο τρόπο. Ιδανικό για να ξεκινήσετε την ημέρα σας με κάθε είδους ρόφημα ενω θα καθόσαστε στους αναπαυτικούς καναπέδες ή στα stand ενός καλαίσθητου χώρου τόσο εσωτερικά όσο και εξωτερικά. Όσο για την απόλαυση του κρασιού εδώ περνάμε σε ένα άλλο επίπεδο. Έχετε να επιλέξετε ανάμεσα σε πολλές ετικέτες σε φιάλη και πολλές από αυτές σε ποτήρι, τις οποίες μπορείτε να συνοδεύσετε με πιάτα ενός snack menu, προσαρμοσμένου στη φιλοσοφία του κρασιού αλλά και άλλων επιλογών, όπως της μπύρας. Όλα αυτά σε μια ατμόσφαιρα με όμορφη μουσική.</item>
        <item>Mode@40.301628@21.786480@Μούκα 1@ Το Mode γεννήθηκε το καλόκαιρι του 2003. Το όνομα του καταστήματος που σημαίνει "τρόπος έκφρασης" ήταν ιδέα τριών ανθρώπων που εμπνεύστηκαν ένα χώρο για πολύ απαιτητικούς φίλους. Φίλους της καλής μουσικής, των καλών ποτών. Φίλους των events και των coctails. Φίλους του αρωματικού καφέ και της κουβέντας.@ Έχοντας κερδίσει την εμπιστοσύνη του κόσμου πορεύεται μέσα στο χρόνο δίνοντας αξία στις στιγμές τους με την εξυπηρέτηση και το φιλικό περιβάλλον. Έπισης συχνά διοργανώνονται αφιερώματα με salsa μουσική.</item>
        <item>Times Square@40.300980@21.788491@Παύλου Μελά (Πλατεία Νίκης)@ Αποτελεί το πιο όμορφο lounge cafe-wine bar στην πόλη της Κοζάνης. Δημιουργήθηκε μία νέα τάση στον χώρο με έμφαση στην ποιότητα, στην ποικιλία και στην ατμόσφαιρα του περιβάλλοντος χώρου.@ Με ιδιαίτερη αισθητική κατάφερε να συνδυάσει τα σύγχρονα στοιχεία διακόσμησης με το ξύλο και την φύση σε industrial street ύφος της εποχής μας. Εδώ θα απολαύσουμε τον καφέ, το κρασί ή το ποτό μας με κύριο χαρακτηριστικό το εξαιρετικό service. Η μεγάλη ποικιλία κρασιών, των Malt Whiskey, των ευφάνταστων cocktails και τα μίνι γεύματα, εμπνευσμένα από τις πρωτότυπες συνταγές των σεφ είναι μόνο η αρχή. Ωραίες ξένες μουσικές και πολύ ωραία happenings ανά περιόδους καθιστούν το χώρο ιδανικό.</item>
    </string-array>
    <string-array name="restaurants_array">
        <item>To Ρεβύθι@40.300751@21.786725@Δρίζη 5@ Θυμίζει παραδοσιακό βολιώτικο καφενέ ή ισπανικό ταπάδικο, αφού με κάθε τσίπουρο έρχεται και διαφορετικό μεζεδάκι. Όταν ο καιρός είναι καλός, οι μεζέδες βγαίνουν απέναντι από το παλαιό Βαλταδώρειο γυμνάσιο.@ Έμφαση στην ελληνική κουζίνα. Πέτρινο και ξύλινο, με εξαιρετική διακόσμηση που αφήνει μια ζεστή αίσθηση στο χώρο.Το μενού αποτελείται από ιδιαίτερα πιάτα και απολαυστικούς μεζέδες.</item>
        <item>Το Πέλαγος@40.299665@21.787237@Μητροπολιτη Κωνσταντινου 1@ Η γευστικοτερη ψαροταβερνα της πολης. Μικρο και γραφικο μαγαζι στο κεντρο της πολης της Κοζανης. Όλα τα φαγητα ειναι φρεσκα και ετοιμαζονται εκεινη τη στιγμη.@ Υπαρχει αφθονη ποικιλια να καλυψει και τους πιο απαιτητικους. Με άψογη εξυπηρετηση νιωθεις ανετα σαν να τρως στο σπιτι σου. Τα ψαρια, ψημενα τοσο, οσο χρειαζεται για να τα απολαυσεις. Τα επιδορπια ατελειωτα.</item>
        <item>Τρυποκάρυδος@40.301585@21.786963@Μουράτη Ιωάννου 3@ Το Beer Bar Restaurant ΤΡΥΠΟΚΑΡΥΔΟΣ λειτουργεί από τον Μάρτιο του 2002 σε ένα ξεχωριστό, ζεστό και φιλικό χώρο. Αποτελεί μια εναλλακτική πρόταση διασκέδασης που συνδυάζει ποτό, φαγητό και μουσική.@ Προσφέρει μεγάλη ποικιλία σε μπύρες και κρασιά, συνδυάζοντάς τα με ξεχωριστές γαστρονομικές προτάσεις βασισμένες στις γεύσεις της περιοχής.</item>
    </string-array>
    <string-array name="accommodation_array">
        <item>Elena@40.308583@21.784117@Δημοκρατίας 47@ Το Elena Hotel απέχει 500μ. από το κέντρο της Κοζάνης. Προσφέρει κομψά και κλιματιζόμενα δωμάτια με δωρεάν Wi-Fi. Διαθέτει εστιατόριο, μπαρ και δωρεάν χώρο στάθμευσης.@ Τα ζεστής ατμόσφαιρας δωμάτια του Elena είναι εξοπλισμένα με δορυφορική τηλεόραση, θυρίδα ασφαλείας και μίνι μπαρ. Το ιδιωτικό μπάνιο περιλαμβάνει ντους και στεγνωτήρα μαλλιών. Στο εστιατόριο του ξενοδοχείου μπορείτε να απολαύσετε κρύα πιάτα, ενώ το μπαρ σερβίρει ποτά και κοκτέιλ σε ένα κλασικό περιβάλλον. Σε μικρή απόσταση με τα πόδια από το ξενοδοχείο υπάρχουν εστιατόρια, μπαρ και καφέ. Το αεροδρόμιο της Κοζάνης απέχει 10 λεπτά με το αυτοκίνητο.</item>
        <item>Eρμιόνιο@40.301295@21.787663@Πλατεία Νίκης@ Το Ερμιόνιο είναι ένα ιστορικό κτίριο, Ευρωπαϊκής Πολιτιστικής Κληρονομιάς, του 1930 στο κέντρο της πόλης της Κοζάνης. Έχει φιλοξενήσει κατά καιρούς βασιλείς, αρχηγούς κρατών, πρωθυπουργούς και άλλα ιστορικά πρόσωπα.Ανακαινίσθηκε και λειτουργεί ως ξενοδοχείο 5*, το μοναδικό στην περιοχή.@ Στον 3ο όροφο του Ερμιόνιο το μοντέρνο BAR RESTAURANT με εκπληκτική θέα στην κεντρική πλατεία της Κοζάνης κάνει κάθε στιγμή αξέχαστη. Η μοναδική διακόσμηση και τα εντυπωσιακά cocktail χαράζουν μια νέα εποχή στην διασκέδαση. Απολαύστε ένα ελαφρύ σνακ στο μπαρ ή ένα πλήρες γεύμα σε συνδυασμό με ένα ποτήρι κρασί ή κονιάκ και μετατρέψτε την βραδιά σας σε μια αξέχαστη εμπειρία.</item>
        <item>Aliakmon@40.300246@21.790665@Ελ. Βενιζέλου 38@ Το Aliakmon Hotel βρίσκεται σε απόσταση 200μ. από το κέντρο της Κοζάνης. Πρόκειται για ένα καλαίσθητο ξενοδοχείο, κοντά σε σημεία ενδιαφέροντος, καταστήματα και εστιατόρια. Προσφέρει σνακ μπαρ, δωρεάν Wi-Fi σε όλους τους χώρους και δωρεάν ιδιωτικό χώρο στάθμευσης.@ Τα δωμάτια έχουν μοντέρνα διακόσμηση σε γήινους χρωματικούς τόνους και διαθέτουν ηχομόνωση. Είναι εξοπλισμένα με ψυγείο, κλιματισμό, LCD τηλεόραση και θυρίδα ασφαλείας. Το Aliakmon Hotel απέχει 2χλμ. από το αεροδρόμιο της Κοζάνης, 1χλμ. από το σταθμό των λεωφορείων (ΚΤΕΛ) και 120χλμ. από το λιμάνι της Θεσσαλονίκης. Το προσωπικό της 24ωρης ρεσεψιόν μπορεί να σας δώσει πληροφορίες σχετικά με το κοντινό Αρχαιολογικό Μουσείο και τον Δημοτικό Κήπο της Κοζάνης. </item>
    </string-array>
    <string name="title_activity_choice">ChoiceActivity</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
</resources>