<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView3"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="10dp"
    android:background="@color/grey1"
    tools:context="com.example.staykozani.DetailsActivity" >
	
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
	    <TextView
	        android:id="@+id/detailedPOINameTextView"
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/category"
			android:textStyle="bold"
			android:textColor="@color/white"
			android:padding="10dp"
			android:background="@color/red"
			android:textSize="30sp"
			android:drawable="@drawable/ic_pointer"/>
	    
	     <ImageSwitcher
	        android:id="@+id/detailedPOIImageSwitcher"
	        android:layout_width="match_parent"
	        android:layout_height="250dp"
	        android:padding="10dp"
	        android:layout_gravity="center"
	        android:layout_marginTop="10dp"
	        android:adjustViewBounds="true"
	        android:background="@color/black"
	        android:contentDescription="@string/desc"
	        android:scaleType="fitCenter" />
	     
	     <ImageButton
		    android:id="@+id/detailedPOINextButton"
	        android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		   	android:layout_gravity="end"    	   
		    android:textColor="@color/grey3"
	        android:textStyle="bold"
	        android:contentDescription="@string/desc"
	       	android:background="@null"
	       	android:src="@drawable/ic_right"/>
	   	     
	     <TextView
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:gravity="center_horizontal"
		    android:text="@string/information"
		    android:textAppearance="?android:attr/textAppearanceLarge"
		    android:textColor="@color/grey3"
			android:textStyle="bold"/>
	    
	    <TextView
	        android:id="@+id/detailedPOIDescriptionTextView"
	        android:layout_margin="10dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="15dp"
	        android:background="@color/white"
	        android:textColor="@color/grey3"
	        android:text="@string/desc" />
	    
    </LinearLayout>
    
</ScrollView>
